--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                 <div class="btnNavBarCategory">
                     <button class="btnNavBar" id="btnSave">
                         <?xml version="1.0" encoding="utf-8"?>
-                        <svg width="20px" height="20x" viewBox="0 0 24 24" fill="none"
+                        <svg width="20px" height="20x" viewBox="0 0 24 24" fill="#000"
                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 3V16M12 16L16 11.625M12 16L8 11.625" stroke="#1C274C" stroke-width="1.5"
                                 stroke-linecap="round" stroke-linejoin="round" />
@@ -31,7 +31,7 @@
                             <g fill-rule="evenodd" transform="translate(42.667 42.667)">
                                 <path
                                     d="M178.0832,42.6666667 L221.594,77.0716667 L191.217,107.448667 L163.24992,85.3333333 L42.6666667,85.3333333 L42.6666667,296.106667 L82.0209067,170.666667 L341.333333,170.666667 L341.333,170.665667 L384,170.665667 L437.333333,170.666667 L372.583253,384 L0,384 L0,42.6666667 L178.0832,42.6666667 Z M379.79136,213.333333 L113.354027,213.333333 L73.1874133,341.333333 L340.95808,341.333333 L379.79136,213.333333 Z" />
-                                <path fill-rule="nonzero"
+                                <path
                                     d="M384,0 L384,149.333333 L341.333333,149.333333 L341.332777,72.836 L264.836777,149.332777 L204.496777,149.333333 L311.162777,42.666 L234.666667,42.6666667 L234.666667,0 L384,0 Z" />
                             </g>
                         </svg>
@@ -50,8 +50,10 @@
             </nav>
             <div id="imageExplorer" class="image-explorer" style="display:none;">
                 <h3>Fichiers :</h3>
-                <button id="btnCreateFolder">+ Folder</button>
-                <button id="btnUploadImages">+ Images</button>
+                <div style="display: flex; gap: 10px; margin-bottom: 15px;">
+                    <button id="btnCreateFolder" style="flex: 1;">+ Folder</button>
+                    <button id="btnUploadImages" style="flex: 1;">+ Image</button>
+                </div>
                 <input type="file" id="imageFilesInput" accept="image/*" multiple style="display:none">
                 <div id="rootDropZone">
                     🏠 Root
