--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
                 </div>
             </nav>
             <div id="imageExplorer" class="image-explorer" style="display:none;">
-                <h3>Fichiers :</h3>
+                <h3>files :</h3>
                 <div style="display: flex; gap: 10px; margin-bottom: 15px;">
                     <button id="btnCreateFolder" style="flex: 1;">+ Folder</button>
                     <button id="btnUploadImages" style="flex: 1;">+ Image</button>
