Fix: insert doc into subfolders - closes #1

--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
                 <h3>files :</h3>
                 <div style="display: flex; gap: 10px; margin-bottom: 15px;">
                     <button id="btnCreateFolder" style="flex: 1;">+ Folder</button>
-                    <button id="btnUploadImages" style="flex: 1;">+ Image</button>
+                    <button id="btnUploadImages" style="flex: 1;">+ Document</button>
                 </div>
                 <input type="file" id="imageFilesInput" accept="*" multiple style="display:none">
                 <div id="rootDropZone">
