Fix css problems

--- a/client/index.html
+++ b/client/index.html
@@ -50,8 +50,8 @@
             <div id="imageExplorer" class="image-explorer" style="display:none;">
                 <h3>files :</h3>
                 <div style="display: flex; gap: 10px; margin-bottom: 15px;">
-                    <button id="btnCreateFolder" style="flex: 1;">+ Folder</button>
-                    <button id="btnUploadImages" style="flex: 1;">+ Document</button>
+                    <button id="btnCreateFolder" class="btnAction" style="flex: 1;">+ Folder</button>
+                    <button id="btnUploadImages" class="btnAction" style="flex: 1;">+ Document</button>
                 </div>
                 <input type="file" id="imageFilesInput" accept="*" multiple style="display:none">
                 <div id="rootDropZone">
